# Py-Library

./: LibraryCollection.spec  README.md  build_exe.ps1  pyproject.toml  run_library_modern.py  settings.json
Library_app/: STRUCTURE.md
Library_app/library_modern/: __init__.py  __main__.py  data.py  ui.py
